--- a/35Individual Behavior analysis modeling and prediction.Rmd
+++ b/35Individual Behavior analysis modeling and prediction.Rmd
@@ -31,19 +31,19 @@ knitr::opts_chunk$set(echo = TRUE)
 
 &emsp;&emsp;行为分析通常由四部分组成：
 
-1.	一个可观察到的行为。被分析的行为需要是可被准确观察的。
+1.一个可观察到的行为。被分析的行为需要是可被准确观察的。
 
-2.	特征。我们需要构建相关的数据特征(协变量)，这些特征可能会也可能不会影响(或受影响)行为。
+2.特征。我们需要构建相关的数据特征(协变量)，这些特征可能会也可能不会影响(或受影响)行为。
 
-3.	特征—行为关联。目的是找出特征和行为之间的关系，描述特征的变化如何导致行为(或改变其强度)。我们使用决策树学习来发现与社区加入行为最相关的特征。
+3.特征—行为关联。目的是找出特征和行为之间的关系，描述特征的变化如何导致行为(或改变其强度)。我们使用决策树学习来发现与社区加入行为最相关的特征。
 
-4.	评估方法。最后一步是评估结果。这种评估保证了这些发现是由于定义的特征而不是外部性。我们使用分类精度来验证社区加入行为特征的质量。
+4.评估方法。最后一步是评估结果。这种评估保证了这些发现是由于定义的特征而不是外部性。我们使用分类精度来验证社区加入行为特征的质量。
 
 ### （二）实例：社交媒体中的社区成员
 
 &emsp;&emsp;社交媒体上的一个典型案例是用户加入社区，我们通过分析社区加入行为的影响因素作为案例，向大家介绍行为分析方法。
 
-&emsp;&emsp;首先，我们观察加入社区的用户，并确定他们之间的共同因素。定义一个用户集 $U$ = {$u_1$,$u_2$,...,$u_n$}，一个社区 $C$，以及社区成员信息。同时，为了区分已经加入社区的用户和正在加入社区的用户，我们引入时间的概念。我们需要在两个不同的时间加入社区成员: $t_1$ 和 $t_2$ , $t_2$ > $t_1$。在 $t_2$ 时，我们确定像 $u$ 这样的用户目前是社区成员，但在 $t_1$ 时还不是社区成员。这些新用户形成了用于分析社区加入行为的子群体。
+&emsp;&emsp;首先，我们观察加入社区的用户，并确定他们之间的共同因素。定义一个用户集 $U$ = {$u_1$,$u_2$,...,$u_n$}，一个社区$C$，以及社区成员信息。同时，为了区分已经加入社区的用户和正在加入社区的用户，我们引入时间的概念。我们需要在两个不同的时间加入社区成员: $t_1$ 和 $t_2$ , $t_2$ > $t_1$。在 $t_2$ 时，我们确定像 $u$ 这样的用户目前是社区成员，但在$t_1$时还不是社区成员。这些新用户形成了用于分析社区加入行为的子群体。
 
 &emsp;&emsp;为了确定影响社区加入行为的因素，我们根据描述社区加入行为发生时的不同因素设计假设。并通过利用社交媒体上的数据来验证这些假设。例如其中一种假设是，当一个人的朋友也在从事同样的活动时，他就会倾向于从事同样的活动。因此，如果假设成立，那么影响用户加入社区的一个因素就是他们的好友数量。在数据挖掘术语中，这意味着使用一个人在社区中的朋友数量作为预测这个人是否加入社区的特征。
 
@@ -57,20 +57,22 @@ knitr::opts_chunk$set(echo = TRUE)
 
 &emsp;&emsp;个人行为模型可以帮助详细描述特定的个人行为会在社交媒体中被观察到的原因。此外，它们允许控制实验和模拟，帮助研究社交媒体中的个人。在行为建模中，必须首先做出一组假设。
 
-### （一）阈值模型
+### （案例一）阈值模型
 
 &emsp;&emsp;当一种行为在网络中扩散时，可以使用阈值模型。在阈值模型中，需要学习的参数为节点激活阈值 $θ$ 和影响概率 $w_{ij}$。
 
 #### 实例
-&emsp;&emsp;考虑一个商品商店，该商店知道个人和他们的交易历史(例如，他们购买的商品)之间的联系。然后, $w_{ij}$ 可以被定义为用户 $i$ 购买一个产品和用户 $j$ 在不久之后购买相同产品的比例。“不久”的定义需要澄清，可以根据网站的偏好和朋友购买相同产品的平均时间来设置。同样地 $θ$ 可以通过考虑用户 $i$ 决定购买产品之前需要购买该产品的朋友的平均数量来估计。当然，只有当用户 $i$ 购买的产品同时被她的朋友购买时才会出现这种情况。当情况并非如此时，可以使用协作过滤的方法来找出用户 $i$ 的朋友在用户 $i$ 决定购买产品之前购买的类似物品的平均数量。
+&emsp;&emsp;考虑一个商品商店，该商店知道个人和他们的交易历史(例如，他们购买的商品)之间的联系。然后, $w_{ij}$ 可以被定义为用户 $i$ 购买一个产品和用户 $j$ 在不久之后购买相同产品的比例。“不久”的定义需要澄清，可以根据网站的偏好和朋友购买相同产品的平均时间来设置。同样地$θ$可以通过考虑用户$i$决定购买产品之前需要购买该产品的朋友的平均数量来估计。当然，只有当用户$i$购买的产品同时被她的朋友购买时才会出现这种情况。当情况并非如此时，可以使用协作过滤的方法来找出用户$i$的朋友在用户 $i$ 决定购买产品之前购买的类似物品的平均数量。
 
-### （二）级联模型
+### （案例二）级联模型
 
 &emsp;&emsp;级联模型是指创新、产品或信息通过网络级联的例子。关于级联模型的讨论与阈值模型相似，只是级联模型是以发送者为中心的。也就是说，发送方决定激活接收方，而阈值模型是以接收方为中心的，即接收方由多个发送方激活。因此，在级联模型中，ICM参数的计算需要从发送方的角度进行。请注意，阈值模型和级联模型都是个体行为建模的例子。
 
 ## 四、个体行为预测
 
 正如前面所讨论的，大多数行为都会导致在社交媒体上形成新的链接。它可以是指向用户的链接，就像交友行为一样;链接与实体的链接，如在购买行为中;或者连接到一个社区，比如加入行为。因此，我们可以将许多这些行为表述为链接预测问题。接下来，我们讨论社交媒体中的链接预测。
+
+### 实例：
 
 &emsp;&emsp;链接预测假设图 $G(V, E)$，设 $E(u, v)$ ∈ $E$ 表示节点 $u$ 与 $v$ 之间的一条交互(边)，设 $t(e)$ 表示时间交互。设 $G[t1,t2]$ 表示 $G$ 的子图，使所有边都在 $t_1$ 和 $t_2$ 之间。现在给定四个时间戳 $t_1$ < $t_1^{'}$ < $t_2$ < $t_2^{'}$、给出子图 G[$t_1$,$t_1^{'}$] (训练间隔)，预计预 测 G[$t_2$,$t_2^{'}$)(测试时间间隔)。需要注意的是，就像新的边一样，社交网络也可以引入新节点;因此, G(t~2~, $t_2^{'}$) 可能在 G[$t_1$,$t_1^{'}$] 中并不存在。因此，链路预测算法通常被限制为仅对训练期间存在的节点对进行边缘预测。我们可以添加额外的约束，例如在测试和训练期间，只预测与至少 $k$ 条边(即大于或等于 $k$ 度)相关的节点的链接。
 
